fixing null options

--- a/Views/DojoSurvey/Result.cshtml
+++ b/Views/DojoSurvey/Result.cshtml
@@ -13,7 +13,7 @@
         <h1><u>Submitted Info</u></h1>
         <div class="itemSelect">
             <p>Name:</p>
-            <p>@(ViewBag.Name != null?ViewBag.Name:"No name provided")</p>
+            <p>@ViewBag.Name</p>
         </div>
         <div class="itemSelect">
             <p>Dojo Location:</p>
